# gemma-4-good-rexvqa

./: .gitignore  AGENTS.md  README.md  build_quota_dataset.py  demo.py  inference.py  pyproject.toml  train_sdft.py
conf/: build_quota_dataset.yaml  demo.yaml  inference.yaml  train_sdft.yaml
conf/inference/data/: test.yaml  valid.yaml  valid_mini.yaml
conf/inference/model/: chexone.yaml  gemma4.yaml  gemma4_thinking.yaml  gemma4_trained.yaml  gemma4_unsloth.yaml  medgemma.yaml
conf/inference/run/: default.yaml
conf/inference/runtime/: transformers.yaml  vllm.yaml
conf/quota_dataset/: fastlift_v1.yaml  fastlift_v2.yaml  smoke.yaml
conf/train_sdft/data/: quota_fastlift_v1.yaml  quota_fastlift_v2.yaml  smoke.yaml
conf/train_sdft/dataset/: sdft_explanation.yaml  sdft_explanation_rich.yaml
conf/train_sdft/eval/: disabled.yaml  valid_mini.yaml
conf/train_sdft/experiment/: sdft_explanation_gemma4_fastlift_v2.yaml
conf/train_sdft/logging/: tensorboard.yaml  trackio_tensorboard.yaml
conf/train_sdft/model/: gemma4_lora.yaml
conf/train_sdft/training/: sdft_v1.yaml  sdft_v2.yaml  smoke.yaml
notebooks/: data.ipynb  error_analysis.ipynb
rexvqa_models/: README.md  pyproject.toml
rexvqa_models/src/rexvqa_models/: __init__.py  adapter_utils.py  base.py  base_transformers.py  base_vllm.py  chexone.py  evaluator.py  gemma.py  image_utils.py  io_utils.py  medgemma.py  merge_utils.py  peft_patches.py  prompting.py  quota_dataset.py  sdft_dataset.py  sdft_vision.py  types.py
