[project]
name = "rexvqa"
version = "0.1.0"
description = "Chest X-ray visual question answering experiments for ReXVQA and ReXrank"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "rexvqa_models>=0.1.0",
]

[dependency-groups]
notebook = [
    "scikit-learn>=1.8.0",
    "jupyter>=1.1.1",
    "pandas",
    "huggingface_hub",
    "matplotlib",
]
fast_inference = [
    "flash-attn>=2.8.3",
    "flash-linear-attention",
    "causal-conv1d>=1.6.1",
]
vllm = [
    "vllm>=0.19.1",
]
training = [
    "accelerate>=1.6.0",
    "bitsandbytes",
    "peft>=0.17.0",
    "rich>=14.3.3",
    "safetensors",
    "tensorboard",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trackio",
    "transformers==5.5.4",
    "trl==1.2.0",
    "unsloth[base]>=2026.4.8",
    "unsloth_zoo[base]",
    "xformers",
]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.32",
]
demo = [
    "accelerate>=1.6.0",
    "gradio>=5.0.0",
    "peft>=0.17.0",
    "pillow>=12.2.0",
    "safetensors>=0.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.56,<6",
]

[tool.uv]
override-dependencies = [
    "datasets==4.7.0",
    "transformers==5.5.4",
    "trl==1.2.0",
]

[tool.uv.workspace]
members = [
    "rexvqa_models",
]


[tool.uv.sources]
rexvqa_models = { workspace = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }, "ninja"]
causal-conv1d = [{ requirement = "torch", match-runtime = true }]
flash-linear = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { MAX_JOBS = "4" }
