[project]
name = "rexvqa-models"
version = "0.1.0"
description = "Model, prompting, inference, and evaluation utilities for ReXVQA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "litellm>=1.0.0",
    "pandas",
    "pillow>=12.2.0",
    "peft>=0.17.0",
    "safetensors>=0.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.56,<6",
    "accelerate>=1.6.0",
    "datasets>=4.7.0,<5",
    "tqdm>=4.66.1,<5",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.19.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
